# pastexam

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  issue.yml  pr.yml  release.yml  test.yml  umami.yml
backend/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/alembic/versions/: 01075665e961_add_archive_discussion_messages_and_.py  3d608a21fb34_add_deleted_at_to_users_and_.py
backend/app/: main.py  worker.py
backend/app/api/: api.py
backend/app/api/services/: ai_exam.py  archives.py  auth.py  courses.py  notifications.py  statistics.py  users.py
backend/app/db/: init_db.py  seed_data.yaml
backend/app/models/: models.py
backend/app/services/: auth.py
backend/app/utils/: auth.py  auth_ws.py
backend/tests/: conftest.py
backend/tests/api/: test_ai_exam.py  test_archive_discussion.py  test_archives.py  test_auth.py  test_notifications.py  test_statistics.py  test_users.py  test_users_me.py
backend/tests/services/: test_auth_service.py
backend/tests/utils/: test_auth_utils.py
docker/: docker-compose.dev.yml
frontend/: .env.example  Dockerfile  Dockerfile.dev  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/public/favicon-bright/: site.webmanifest
frontend/public/favicon-dark/: site.webmanifest
frontend/src/: App.vue  style.css
frontend/src/api/: index.js
frontend/src/components/: ArchiveDiscussionPanel.vue  GenerateAIExamModal.vue  Navbar.vue  (+4 more)
proxy/: nginx-zeabur.conf  nginx.conf
(+42 files in other folders)
