[project]
name = "pastexam-backend"
version = "0.1.0"
description = "Past Exam API Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "arq>=0.25.0",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.45.0",
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "minio>=7.2.15",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "redis[hiredis]>=5.3.1",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]
